testdata/002-invalid-version.stderr
error: invalid version declaration (line=1 col=7)
  HAI 1.3
        ^
